# slay_canvas

./: .env.example  .gitignore  GOOGLE_OAUTH_SETUP.md  README.md  alembic.ini  create_db.py  create_github_repo.ps1  email_config.py  generate_secret.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.ps1  setup_and_run.py  setup_email.py  test_system.py
ai/: __init__.py  agents.py  orchestrator.py  workflows.py
alembic/: env.py
alembic/versions/: 02fff846707a_add_chatmessage_table.py  157b1d4f323d_add_assets_table.py  187968f180e6_create_nodes_table.py  1eb27bfd4ae9_create_nodes_table.py  49d2afc1a172_create_nodes_table.py  54df23cc77e3_create_nodes_table.py  58fd31641797_create_nodes_table.py  5da3eb8d710e_add_workspace_model.py  7e80867f99f2_add_otp_verification_table.py  8592420aa448_create_nodes_table.py  939a9d92a634_add_content_column_to_assets.py  93e463003bf2_create_boards_table.py  97710c15e3fd_initial_migration.py  a3f81be4440f_change_full_name_to_name_in_users_table.py  a4d591e16243_add_boards_table.py  b24183a17638_update_user_and_workspace_models.py  c13195e82ee2_rename_metadata_to_asset_metadata_in_.py  c771175c747d_create_nodes_table.py  d05eeb6f3a0b_fix_boards_updated_at_default.py  d4860ab2aea9_add_nodes_table.py  ef49399cb8ce_add_content_column_to_assets.py
app/: main.py  main_db.py
app/api/: __init__.py  ai.py  assets.py  auth.py  auth_db.py  boards.py  chatmessages.py  media.py  nodes.py  users.py  workspaces.py
app/core/: config.py
engine/: README.md  __init__.py  adapter.py  langraph_engine.py  nodes.py  orchestrator.py
(+30 files in other folders)
